--- a/week-3/Homework/2-slideshow/index.html
+++ b/week-3/Homework/2-slideshow/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Slideshow</title>
-    <script src="slideshow.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <!-- Write your HTML in here -->
-  </body>
+
+<head>
+  <title>Slideshow</title>
+  <!-- <script src="slideshow.js"></script> -->
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" -->
+    <!-- integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" /> -->
+  <!-- <link rel="stylesheet" href="style.css" /> -->
+</head>
+
+<body>
+  <!-- Write your HTML in here -->
+
+  <div class="container">
+
+    <h1>Image Carousel Simplest Demo</h1>
+    <div><img id="image" src="https://images.dog.ceo//breeds//kelpie//n02105412_5282.jpg" height="300" alt="random"></div>
+    <div id="divid"></div>
+    <button id="back-auto">Auto Back</button>
+    <button id="back">Back</button>
+    <button id="stop">Stop</button>
+    <button id="forward">Forward</button>
+    <button id="forward-auto">Auto Forward</button>
+
+  </div>
+
+  <script src="slideshow.js"></script>
+</body>
+
 </html>
