week-3 Homework 2-slideshow v3.0

--- a/week-3/Homework/2-slideshow/index.html
+++ b/week-3/Homework/2-slideshow/index.html
@@ -15,7 +15,7 @@
   <div class="container">
 
     <h1>Image Carousel Simplest Demo</h1>
-    <div><img id="image" src="https://images.dog.ceo//breeds//kelpie//n02105412_5282.jpg" height="300" alt="random">
+    <div><img id="image" src="" height="300" alt="random">
     </div>
     <div id="divid"></div>
     <button id="back-auto">Auto Back</button>
