week-3 InClass B-movies v2.0

--- a/week-3/InClass/B-movies/index.html
+++ b/week-3/InClass/B-movies/index.html
@@ -23,6 +23,17 @@
         <p class="alert alert-info">Number of movies: <span id="movies-number"></span></p>
       </div>
     </div>
+    <form>
+      <div class="form-group">
+        <label>Enter a new movie:</label>
+        <input class="form-control" type="text" id="title" placeholder="Enter title">
+        <input class="form-control" type="text" id="director" placeholder="Enter director">
+        <input class="form-control" type="text" id="type" placeholder="Enter type">
+        <!-- <input class="form-control" type="text" id="haveWatched" placeholder="HaveWatched? Enter true or false"> -->
+        <label>HaveWatched?:</label>
+        <input type="checkbox" id="haveWatched" unchecked>
+        <button type="submit">Save</button>
+    </form>
     <script src="exercise.js"></script>
 </body>
 
